--- a/index.html
+++ b/index.html
@@ -688,6 +688,59 @@
         font-size: 20px;
       }
     }
+    /* ✅ Blue “Check for eligibility” button */
+.elig-cta{
+  margin-top: 10px;
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 14px;
+  border-radius: 999px;
+
+  background: linear-gradient(135deg, #0b67ff, #007acc);
+  color: #ffffff;
+  text-decoration: none;
+
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+
+  border: 1px solid rgba(255,255,255,0.45);
+  box-shadow: 0 16px 32px rgba(0, 122, 204, 0.35);
+
+  transition: transform .15s ease, box-shadow .15s ease, filter .15s ease;
+}
+
+.elig-cta:hover{
+  transform: translateY(-3px);
+  filter: brightness(1.03);
+  box-shadow: 0 20px 40px rgba(0, 122, 204, 0.42);
+}
+
+.elig-cta:active{
+  transform: translateY(0) scale(0.98);
+}
+
+.elig-cta .cta-icon{
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.18);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,0.25);
+}
+
+@media (max-width: 780px){
+  .elig-cta{
+    width: 100%;
+    justify-content: center;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -757,6 +810,11 @@
       </div>
     </div>
   </div>
+  <a class="elig-cta" href="./index2.html" title="Open IV→PO Eligibility Dashboard">
+  <span class="cta-icon">✅</span>
+  <span>Check for eligibility — click here</span>
+</a>
+
 
   <!-- SIGNATURE -->
   <div class="signature" style="text-align: center; margin-top: 24px; font-size: 14px; color: #444;">
